# infra-review-cli

./: .gitignore  README.md  docker.yml  pyproject.toml  reproduce_report.py
src/data/: EC2 Instance Types.csv
src/infra_review_cli/: cli.py  config.py  main.py
src/infra_review_cli/adapters/: provider_registry.py
src/infra_review_cli/adapters/aws/: aws_provider.py  cloudfront_adapter.py  cloudtrail_adapter.py  cloudwatch_adapter.py  ebs_adapter.py  ec2_adapter.py  ecs_adapter.py  elb_adapter.py  iam_adapter.py  lambda_adapter.py  rds_adapter.py  s3_adapter.py  sustainability_adapter.py  tagging_adapter.py  vpc_adapter.py
src/infra_review_cli/adapters/cli/: cli.py
src/infra_review_cli/adapters/report/: summary.py
src/infra_review_cli/core/: base_check.py  base_provider.py  formatters.py  models.py  scoring.py  utility.py
src/infra_review_cli/core/ai/: cost.py  ec2.py  fargate.py  llm_client.py  remediation.py
src/infra_review_cli/core/checks/: check_unused_elb.py  ec2.py  ecs.py  elb.py  iam.py  operational_excellence.py  performance.py  rds.py  s3.py  s3_public_access.py  sustainability.py  vpc.py
src/infra_review_cli/reports/: html_report.py
src/infra_review_cli/reports/static/: report.css  report.js
src/infra_review_cli/reports/templates/: base.html.j2  report.html.j2
src/infra_review_cli/reports/templates/partials/: findings.html.j2  footer.html.j2  header.html.j2  hero.html.j2  pillars.html.j2  print_report.html.j2  scoring.html.j2
src/infra_review_cli/utils/: formatters.py  pricing.py  render_demo.py  utility.py
tests/core/: test_scoring.py
tests/core/checks/: test_ec2_rightsizing.py  test_sustainability.py
tests/utils/: test_formatters.py
