[project]
name = "infra-review-cli"
version = "0.2.0"
description = "AWS infrastructure scanner with AI-powered remediation and Well-Architected scoring."
authors = [
    {name = "rachealkuranchie", email = "racheal.kuranchie@ic.africa"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "boto3 (>=1.39.11,<2.0.0)",
    "botocore (>=1.39.11,<2.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "markdown-it-py (>=3.0.0,<4.0.0)",
    "questionary (>=2.1.0,<3.0.0)",
    "openai (>=1.97.1,<2.0.0)",
    "anthropic (>=0.40.0,<1.0.0)",
    "click (>=8.1.0,<9.0.0)",
    "rich (>=13.0.0,<14.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
]

[tool.poetry]
packages = [{include = "infra_review_cli", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^5.0.0"
moto = {extras = ["all"], version = "^5.0.0"}
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "infra_review_cli.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=infra_review_cli --cov-report=term-missing"
